libs/bng/test/negative/N0230_rxn_component_used_only_on_one_wo_state.bngl
# FAIL
# OUTPUT: error: Component p with state attribute defined in reactant pattern cannot map to component with undefined state attribute in product pattern, error for pattern molecule A(a,p~0).
#
# NOTE: BNG2.pl reports Component with state attribute defined in reactant pattern cannot map to component with undefined state attribute in product pattern
#
# TODO: this message must be improved, but we are ok with the fail for now 

begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  A(a,p~0) + A(a) <-> A(a!1).A(a!1,p) kp, km
end reaction rules
